# url_shortener

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/core/: rate_limiting.py  security.py
app/models/: click_events.py  urls.py  users.py
app/routers/: admin.py  auth.py  redirect.py  urls.py
app/schemas/: click_event.py  url.py  user.py
app/services/: shortner.py
app/utils/: qrcode.py  short_code.py
